# add-kobo-bookmark

./: pyproject.toml
add_kobo_bookmark/: __init__.py  create_note.py  kobo.py  settings.py
